@@ -1,7 +1,7 @@
 The Stump Window Manager Author
 -------------------------------
 
-Shawn Betts <sabetts@vcn.bc.ca>
+Shawn Betts       sabetts at vcn bc ca
 
 Other Contributors
 ------------------
@@ -9,3 +9,4 @@ Other Contributors
 Ryan M. Golbeck   rmgolbeck at uwaterloo ca
 Manuel Giraud     manuel.giraud at cetp ipsl fr
 Andreas Scholta   andreas.scholta at gmail com
+Philippe Brochard hocwp at free fr
